--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main class="content-wrapper">
             <div class="btn-wrapper">
-                <button class="btn active" data-js="converter1">converter 1</button>
+                <button class="btn" data-js="converter1">converter 1</button>
                 <button class="btn" data-js="converter2">converter 2</button>
                 <button class="btn" data-js="converter3">converter 3</button>
                 <button class="btn" data-js="converter4">converter 4</button>
@@ -24,7 +24,7 @@
                 <button class="btn" data-js="converter7">converter 7</button>
             </div>
             <div class="panel-wrapper">
-                <div class="panel active" data-js="converter1">Rian</div>
+                <div class="panel" data-js="converter1">Rian</div>
                 <div class="panel" data-js="converter2">Lorem, ipsum dolor.</div>
                 <div class="panel" data-js="converter3">Lorem, ipsum dolor.</div>
                 <div class="panel" data-js="converter4">Lorem, ipsum dolor.</div>
