--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Sistema de conversão de valores</h1>
     </header>
 
-    <main class="content-wrapper">
-            <div class="btn-wrapper">
-                <button class="btn" data-js="converter1">converter 1</button>
+    <main class="content-wrapper flex">
+            <div class="btn-wrapper flex">
+                <button class="btn active" data-js="converter1">converter 1</button>
                 <button class="btn" data-js="converter2">converter 2</button>
                 <button class="btn" data-js="converter3">converter 3</button>
                 <button class="btn" data-js="converter4">converter 4</button>
@@ -23,8 +23,8 @@
                 <button class="btn" data-js="converter6">converter 6</button>
                 <button class="btn" data-js="converter7">converter 7</button>
             </div>
-            <div class="panel-wrapper">
-                <div class="panel" data-js="converter1">Rian</div>
+            <div class="panel-wrapper flex">
+                <div class="panel active" data-js="converter1">Lorem, ipsum dolor.</div>
                 <div class="panel" data-js="converter2">Lorem, ipsum dolor.</div>
                 <div class="panel" data-js="converter3">Lorem, ipsum dolor.</div>
                 <div class="panel" data-js="converter4">Lorem, ipsum dolor.</div>
