Mostrando como poderia ser feito

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="panel-wrapper flex">
                 <div class="panel active" data-js="converter1">Lorem, ipsum dolor.</div>
-                <div class="panel" data-js="converter2">Lorem, ipsum dolor.</div>
+                <div class="panel" data-js="converter2"><p class="moedas"></p></div>
                 <div class="panel" data-js="converter3">Lorem, ipsum dolor.</div>
                 <div class="panel" data-js="converter4">Lorem, ipsum dolor.</div>
                 <div class="panel" data-js="converter5">Lorem, ipsum dolor.</div>
@@ -35,4 +35,5 @@
     </main>
 </body>
 <script src="main.js"></script>
+<script src="moedas.js"></script> 
 </html>
