--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <option value="2">Armazamento de dados</option>
            </select>
            <div class="block-input">
-                <input type="text">
-                <select id="select-left" class="detail">
+                <input type="text" id="input-left">
+                <select onchange="convert()" id="select-left" class="detail">
                 </select>
            </div>
            <div class="equals">=</div>
            <div class="block-input">
-                <input type="text">
-                <select id="select-right" class="detail">
+                <input type="text" id="input-right">
+                <select  onchange="convert()" id="select-right" class="detail">
                 </select>
-        </div>
+            </div>
         </div>
     </div>
     <footer>
