Separação dos arquivos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <footer>
         <p>Desenvolvido para a diciplina de Projeto Integrador</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
