--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <option value="0">Selecione um Tipo</option>
             <option value="1">Temperatura</option>
             <option value="2">Armazamento de dados</option>
+            <option value="3">Comprimento</option>
            </select>
            <div class="block-input">
                 <input type="text" id="input-left" onchange="convert()">
