Estrutura pronta para receber logica

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
            <select name="select-convert" id="convert" class="types" onchange="getType()">
             <option value="0">Selecione um Tipo</option>
             <option value="1">Temperatura</option>
-            <option value="2">Armazamento de dados</option>
-            <option value="3">Comprimento</option>
+            <option value="2">Comprimento</option>
+            <option value="3">Medidas</option>
            </select>
            <div class="block-input">
                 <input type="text" id="input-left" onchange="convert()">
