Criando conversão de moedas

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <option value="1">Temperatura</option>
             <option value="2">Comprimento</option>
             <option value="3">Medidas</option>
+            <option value="4">Moedas</option>
            </select>
            <div class="block-input">
                 <input type="text" id="input-left" onchange="convert()">
