Centralizando imput e select

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <option value="1">Temperatura</option>
             <option value="2">Comprimento</option>
             <option value="3">Medidas</option>
-            <option value="4">Moedas</option>
            </select>
-           <div class="block-input">
+           <div class="box-imput">
+            <div class="block-input">
                 <input type="text" id="input-left" onchange="convert()">
                 <select onchange="convert()" id="select-left" class="detail">
                 </select>
@@ -31,6 +31,7 @@
                 <select id="select-right" onchange="convert()" class="detail">
                 </select>
             </div>
+           </div>
         </div>
     </div>
     <footer>
