--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <option value="0">Selecione um Tipo</option>
             <option value="1">Temperatura</option>
             <option value="2">Comprimento</option>
-            <option value="3">Medidas</option>
+            <option value="3">Moedas(Cotação fixa)</option>
            </select>
            <div class="box-imput">
             <div class="block-input">
