Criando conversão de tempo/hora

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <option value="1">Temperatura</option>
             <option value="2">Comprimento</option>
             <option value="3">Moedas(Cotação fixa)</option>
+            <option value="4">Hora</option>
            </select>
            <div class="box-imput">
             <div class="block-input">
