Adicionando conversão de pesos

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <option value="2">Comprimento</option>
             <option value="3">Moedas(Cotação fixa)</option>
             <option value="4">Hora</option>
+            <option value="5">Peso</option>
+            <option value="6">Líquido</option>
            </select>
            <div class="box-imput">
             <div class="block-input">
